prodMetadata/src/objects/AIR_Completed_Settings__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Used by AIRCountComplete trigger which checks/unchecks the AIR Completed box on the related record if the Completed box is checked/unchecked on the AIR.</description>
    <fields>
        <fullName>AIR_Completed_field__c</fullName>
        <description>If empty, trigger will assume that the field on the related record is named AIR_Completed__c. If not, specify name here.</description>
        <inlineHelpText>If empty, trigger will assume that the field on the related record is named AIR_Completed__c. If not, specify name here.</inlineHelpText>
        <label>AIR Completed field (if non-standard)</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Determines whether or not this field is checked in the trigger that checks the Completed box on the related record.</description>
        <inlineHelpText>Determines whether or not this field is checked in the trigger that checks the Completed box on the related record.</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Field_API_Name__c</fullName>
        <description>Name of field on AIR record containing a related record ID</description>
        <inlineHelpText>Name of field on AIR record containing a related record ID</inlineHelpText>
        <label>Field API Name on AIR containing an ID</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>AIR Completed Settings</label>
</CustomObject>